<resources>
    <string name="app_name">ToDo App Kotlin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Kotlin ToDo Application</string>
    <string name="connexion">Se connecter</string>
    <string name="inscription">S\'inscrire</string>
    <string name="email">Email</string>
    <string name="mdp">Mot de passe</string>
    <string name="login_title">Page de connexion</string>
    <string name="main_title">Kotlin ToDo Application</string>
    <string name="first_name">Prénom</string>
    <string name="last_name">Nom</string>
    <string name="greetings">Bonjour</string>
</resources>